Added WOFF font format v2

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,14 +68,7 @@ const { title, customID } = Astro.props;
 
       @font-face {
         font-family: "Monaspace Krypton";
-        src: url("/fonts/MonaspaceKrypton-Regular.otf") format("otf");
-        font-weight: normal;
-        font-style: normal;
-      }
-
-      @font-face {
-        font-family: "Monaspace Neon";
-        src: url("/fonts/MonaspaceNeon-Regular.otf") format("otf");
+        src: url("/fonts/MonaspaceKrypton-Regular.woff") format("woff");
         font-weight: normal;
         font-style: normal;
       }
